Group chat delivery and read receipts